--- a/Server/Server/webroot/css/style.css
+++ b/Server/Server/webroot/css/style.css
@@ -7,3 +7,37 @@ body {
 a       { text-decoration: none;      }
 a:hover { text-decoration: underline; }
 
+#header {
+    height: 40px;
+    background: #2e2d2b;
+    padding: 4px;
+    padding-left: 56px;
+    background-image: url('/images/logo.png');
+    background-position: left top;
+    font-size: 24pt;
+    color: #eee;
+    font-weight: bold;
+    background-position: 4px 4px;
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+}
+
+#main {
+    padding: 4px;
+}
+
+.recording {
+    padding: 4px;
+    margin: 4px;
+}
+
+.recording .title {
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.recording .notes {
+    font-size: 9pt;
+}
+
+
