--- a/android/RecordThePiano/src/main/res/layout/fragment_controls.xml
+++ b/android/RecordThePiano/src/main/res/layout/fragment_controls.xml
@@ -18,19 +18,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="00:00.00"
-                android:id="@+id/time_text"
-                android:layout_weight="1"
+                android:text="Recording"
+                android:id="@+id/state_text"
                 android:textSize="34dp"
                 android:textIsSelectable="true"
-                android:gravity="center_vertical|left"/>
+                android:gravity="center_vertical|left"
+                android:layout_weight="1"/>
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Recording"
-                android:id="@+id/state_text"
+                android:text="00:00.00"
+                android:id="@+id/time_text"
+                android:layout_weight="1"
                 android:textSize="34dp"
                 android:textIsSelectable="true"
                 android:gravity="center_vertical|right"/>
@@ -102,15 +103,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-        <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/auto_switch_text"
-                android:id="@+id/auto_switch"
-                android:checked="false"
-                android:layout_gravity="center|left"
-                />
-
         <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
@@ -119,7 +111,16 @@
                 android:layout_weight="1"
                 android:layout_gravity="center"
                 android:indeterminate="false"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginRight="20dp"/>
+
+        <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/auto_switch_text"
+                android:id="@+id/auto_switch"
+                android:checked="false"
+                android:layout_gravity="center|left"
+                />
 
     </LinearLayout>
 
